tests/loops/valid/for_empty.amu
main :: () -> s32 {
    a:s32 = 0;
    for (; ; ) {
        a = a + 1;
        if (a > 3)
            break;
    }

    return a;
}