tests/loops/invalid/break_not_in_loop.amu
main :: () -> s32 {
    break;
}